CMAKE_MINIMUM_REQUIRED( VERSION 3.0 )
PROJECT( voxelMap )

SET(CMAKE_CXX_COMPILER "g++")
SET( CMAKE_BUILD_TYPE Release  )
SET(EXECUTABLE_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/bin)
SET(CMAKE_CXX_FLAGS -std=c++14)

include_directories(${PROJECT_SOURCE_DIR}/include)
ADD_SUBDIRECTORY( ${PROJECT_SOURCE_DIR}/src )